# ManiuSource

./: .gitignore
04/framework/1_handler/ManiuHandler/: settings.gradle
04/framework/2_Binder/BinderManiu/: settings.gradle
04/framework/2_Binder/ManiuIpc/: settings.gradle
AudioandVideo/LS1/: CMakeLists.txt  main.c  main1.c  main2.c  main3.c  main4.c  main5.c  main6.c
AudioandVideo/LS10/: ArrayList.cpp  ArrayList.h  CMakeLists.txt  main.cpp  main1.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp
AudioandVideo/LS12/: CMakeLists.txt  main.cpp  main1.cpp  main2.cpp  main3.cpp
AudioandVideo/LS13/: CMakeLists.txt  main.cpp  main1.cpp  main3.cpp  main4.cpp  main5.cpp  main6.cpp  main7.cpp  main8.cpp
AudioandVideo/LS14/GifFrameWork/app/: build.gradle
AudioandVideo/LS15/JNIDemo/app/: build.gradle
AudioandVideo/LS16/GifFrameWork/app/: build.gradle
AudioandVideo/LS18/NativeDemo/app/: build.gradle
AudioandVideo/LS18/NativeDemo/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
AudioandVideo/LS18/NativeLS3/: settings.gradle
AudioandVideo/LS18/NativeLS3/app/: build.gradle
AudioandVideo/LS2/: CMakeLists.txt  demo2.c  main.c  main1.c  main2.c  main3.c
AudioandVideo/LS23/H264Parse/src/: Main.java
AudioandVideo/LS23/MediaCodecParse/: settings.gradle
AudioandVideo/LS23/MediaCodecParse/app/: build.gradle
AudioandVideo/LS24/H265Parse/src/: Main.java
AudioandVideo/LS25/Camera1Maniu/: camera.md
AudioandVideo/LS26/: 投屏基础代码.rar
AudioandVideo/LS26/v1/H265TouPinPlayer/: settings.gradle
AudioandVideo/LS26/v1/H265ToupinPush/: settings.gradle
AudioandVideo/LS27/: Camera1Maniu.rar  maniu.rar
AudioandVideo/LS27/maniu/VideoChatA/: settings.gradle
AudioandVideo/LS27/maniu/VideoChatB/: settings.gradle
AudioandVideo/LS28/: maniu.rar
AudioandVideo/LS28/Camera2UseProject/: settings.gradle
AudioandVideo/LS3/: CMakeLists.txt  demo.c  main.c  main1.c  main2.c  main3.c  main4.c  main5.c  main6.c
AudioandVideo/LS4/: CMakeLists.txt  main.c  main2.c  main3.c  main5.c  main6.c  main7.c  mainTemplate.c
AudioandVideo/LS4/LS5/: CMakeLists.txt  main.c  main2.c  main4.c  main6.c  main7.c
AudioandVideo/LS5/: CMakeLists.txt  main1.c  main3.c
AudioandVideo/LS5Maniu/: CMakeLists.txt  main.c  main1.c  main2.c  main3.c
AudioandVideo/LS6/: CMakeLists.txt  main.c  main1.c  main2.c  main3.c
AudioandVideo/LS7/: CMakeLists.txt  main.cpp  main1.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  main6.cpp
AudioandVideo/LS8/: CMakeLists.txt  Maniu.cpp  keepon.cpp  keepon.h  main.cpp  main1.cpp  main2.cpp  mainTemplate.cpp
AudioandVideo/LS8/include/: Maniu.h
AudioandVideo/LS9/: CMakeLists.txt  main.cpp  main1.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  main6.cpp
AudioandVideo/Ls16/JniTest/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
AudioandVideo/Ls17/code/LS21/: CMakeLists.txt  CMakeLists1.txt  CMakeLists2.txt  main.c
AudioandVideo/Ls17/code/LS21/include/: test1.c
AudioandVideo/Ls17/code/LS22/: CMakeLists.txt
AudioandVideo/Ls17/code/LS23/: CMakeLists.txt
AudioandVideo/Ls17/code/LS24/: CMakeLists.txt
AudioandVideo/Ls17/code/LS24/include/: test1.h
(+196 files in other folders)
